fix feedback selected button border shift

--- a/src/components/Modals/feedback/randomFeedback/index.scss
+++ b/src/components/Modals/feedback/randomFeedback/index.scss
@@ -86,6 +86,9 @@
         color: red;
       }
       .selectButton {
+        transition: all 0.1s;
+        border: 1px solid rgba(133, 51, 255, 0);
+
         &.active{
           border: 1px solid #8533FF;
         }
